# W55RP20-misc-test

./: CMakeLists.txt  README.md  W5500-EVB-PICO.uf2  W5500-EVB-PICO.uf2(20241121).uf2  W55RP20.uf2  main.c  project.cmake
cli/: CMakeLists.txt  motd.h  node_bin.c  node_dev.c  shell.c  shell.h  w5500_func.c  w5500_func.h  w5500_misc.c  w5500_misc.h  w5500_pico_func.c  w5500_pico_peri_func.c  w5500_polltask.c  w5500_registerview.c  w5500_registerview.h
hardware/rp2040/: hardware_config.h  hw_usb.c
libraries/: CMakeLists.txt
libraries/ioLibrary_Driver/Ethernet/: wizchip_conf.c
libraries/ioLibrary_Driver/Ethernet/W5500/: w5500.c
libraries/pico-extras/: CMakeLists.txt
libraries/pico-extras/lib/lwip/src/apps/http/: fs.c
libraries/pico-extras/lib/lwip/src/apps/lwiperf/: lwiperf.c
libraries/pico-extras/lib/lwip/src/core/ipv4/: dhcp.c
libraries/pico-extras/src/rp2_common/: CMakeLists.txt
libraries/pico-extras/src/rp2_common/pico_rand/: rand.c
port/: CMakeLists.txt
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
port/lwip/: lwipopts.h  w5x00_lwip.c
port/pio/: CMakeLists.txt  wiznet_spi_pio.c  wiznet_spi_pio.pio.static.h
rtos/: rtos_utils.c
services/: services.h
